# PacMan_42_New_CommonCore

./: README.md  config.json  main_pruebaparser.py  main_pruebas.py  pyproject.toml
resources/: requirements.txt
src/: game_manager.py  pac-man.py  parser_config.py
src/UI/: hud.py  main_meny.py  pause_menu.py
src/UI/utils/: __init__.py  ingame_botons.py  main_menu_botons.py
src/consumibles/: pac_gum.py
src/enemies/: enemy_base.py  enemy_blue.py  enemy_orange.py  enemy_pink.py  enemy_red.py
src/maze/: cell.py  maze.py
src/player/: player.py
src/visualizer/: colors.py  visualizer.py
